--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,48 @@
-.title {
-    color: red;
-    display: flex;
-}
-.oi {
-    color: white;
-    display: flex;
-    background-color: purple;
-    padding: 10px 20px;
-    margin: 20px;
-    border: 3px solid yellow;
-    border-radius: 20%;
-}
 
 .body {
+    z-index: 1;
     color:black;
     display: flex;
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    padding: 39px 58px 23px 40px;
-    background-image: url(background.jpg);
-    background-size: cover;
-    
-    
+    padding: 39px 58px 23px 40px;  
+
+}
+.background{
+    z-index: -1;
+    position: absolute;
+    object-fit: cover;
+    width: 100vw;
+    top: 0px;
+    left: 0;
+    opacity: 0.3;
 }
 .header {
     display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: end;
     width: 100%;
     height: 156px;
     background-color: white;
     padding: 31px 29px 32px 41px;
     margin-bottom: 28px;
     border-radius: 8px;
+}
+.titulo {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 40px; /* Tamanho da fonte */
+    margin:0
+    
+}
+.paragrafo {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 15px; /* Tamanho da fonte */
+    margin: 28px 0 0 0;
+
 }
