--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@
 }
 .header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-center;
     flex-direction: column;
     align-items: end;
     width: 100%;
-    height: 156px;
+    max-height: 156px;
     background-color: white;
     padding: 31px 29px 32px 41px;
     margin-bottom: 28px;
@@ -35,12 +35,62 @@
     display: flex;
     font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
     font-size: 40px; /* Tamanho da fonte */
-    margin:0
-    
+    margin:0;
+    max-height: 40px;
 }
 .paragrafo {
     color: black;
     display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 15px; /* Tamanho da fonte */
+    margin: 28px 0 0 0;
+
+}
+
+.perfil {
+    background-color: white;
+    border-radius: 50%;
+    height: 187px;
+    width: 187px;
+    position:absolute;
+    top: 23px;
+    left: 81px;
+}
+.formacao {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: flex-start;
+    background-color: white;
+    border-radius: 8px;
+    padding: 28px 122px 35px 41px;
+    margin-bottom: 28px;
+    margin-left: 30;
+    max-height: 239px;
+    max-width: 724px;
+}
+.box1Formacao {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0;
+}
+.school {
+    display: flex;
+    justify-content: flex-center;
+    align-content: flex-center;
+    color: white;
+    height: 65px;
+    width: 65px;
+    margin: 0 16px 0 0;
+}
+.textFormacao {
+    color: black;
+    display: flex;
+    text-align: left;
+    max-width: 561px;
+    max-height: 108px;
     font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
     font-size: 15px; /* Tamanho da fonte */
     margin: 28px 0 0 0;
