--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@
 .textFormacao {
     color: black;
     display: flex;
+    flex-direction: column;
     text-align: left;
     max-width: 561px;
     max-height: 108px;
@@ -95,4 +96,102 @@
     font-size: 15px; /* Tamanho da fonte */
     margin: 28px 0 0 0;
 
+}
+.paragrafo {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 15px; /* Tamanho da fonte */
+    margin: 0 0 0 0;
+
+}
+
+.conectar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: flex-end;
+    border-radius: 8px;
+    padding: 0;
+    margin-bottom: 0;
+    max-height: 341px;
+    max-width: 530px;
+}
+.box1Conectar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    margin: 0;
+}
+.familia {
+    display: flex;
+    background-color: white;
+    border-radius: 8px;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    max-height: 341px;
+    max-width: 215px;
+}
+.textConectar {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: left;
+    max-width: 203px;
+    max-height: 225px;
+    margin: 0 0 19px 13px;
+    padding: 0 0 0 2px;
+}
+.descricao {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    font-weight: 300;
+    border-radius: 8px;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    max-height: 341px;
+    max-width: 315px;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 64px; /* Tamanho da fonte */
+}
+
+.botaoConectar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-center;
+    align-items: flex-center;
+    background-color: #FFF1CA;
+    border-radius: 8px;
+    padding: 0;
+    margin: 0 0 0 15px;
+    max-height: 60px;
+    max-width: 306px;
+}
+.p2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    padding: 0 0 0 0;
+    margin: 18px 0px 19px 24px;
+    max-height: 60px;
+    width: 306px;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+
+}
+.linkedin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    padding: 0 0 0 0;
+    margin: 10px 27px 10px 12px;
+    max-height: 40px;
+    max-width: 40px;
 }
