--- a/styles.css
+++ b/styles.css
@@ -30,31 +30,6 @@
     margin-bottom: 28px;
     border-radius: 8px;
 }
-.conteudo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: space-around;
-    padding: 0;
-    margin: 0;
-}
-.titulo {
-    color: black;
-    display: flex;
-    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
-    font-size: 40px; /* Tamanho da fonte */
-    margin:0;
-    max-height: 40px;
-}
-.paragrafo {
-    color: black;
-    display: flex;
-    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
-    font-size: 15px; /* Tamanho da fonte */
-    margin: 28px 0 0 0;
-
-}
-
 .perfil {
     background-color: white;
     border-radius: 50%;
@@ -64,6 +39,33 @@
     top: 23px;
     left: 81px;
 }
+.tituloHeader {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 40px; /* Tamanho da fonte */
+    margin:0;
+    max-height: 40px;
+    font-weight: 700;
+}
+.paragrafoHeader {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 15px; /* Tamanho da fonte */
+    margin: 28px 0 0 0;
+    font-weight: 300;
+
+}
+.conteudo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-araound;
+    align-items: space-araound;
+    padding: 0;
+    margin: 0;
+}
+
 .formacao {
     display: flex;
     flex-direction: column;
@@ -77,13 +79,14 @@
     max-height: 239px;
     max-width: 724px;
 }
-.box1Formacao {
+.tituloFormacao {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     margin: 0;
 }
+
 .school {
     display: flex;
     justify-content: flex-center;
@@ -93,7 +96,7 @@
     width: 65px;
     margin: 0 16px 0 0;
 }
-.textFormacao {
+.paragrafoFormacao {
     color: black;
     display: flex;
     flex-direction: column;
@@ -105,15 +108,16 @@
     margin: 28px 0 0 0;
 
 }
-.paragrafo {
+.pf {
     color: black;
     display: flex;
     font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
     font-size: 15px; /* Tamanho da fonte */
     margin: 0 0 0 0;
+    font-weight: 300;
+    Line-height: 17.58px;
 
 }
-
 .conectar {
     display: flex;
     flex-direction: row;
@@ -125,14 +129,7 @@
     max-height: 341px;
     max-width: 530px;
 }
-.box1Conectar {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    margin: 0;
-}
-.familia {
+.imgFamilia {
     display: flex;
     background-color: white;
     border-radius: 8px;
@@ -144,7 +141,8 @@
 .textConectar {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
+
     text-align: left;
     max-width: 203px;
     max-height: 225px;
@@ -153,9 +151,10 @@
 }
 .descricao {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: flex-start;
+    text-align: left;
     font-weight: 300;
     border-radius: 8px;
     padding: 0 0 0 0;
@@ -178,6 +177,17 @@
     max-height: 60px;
     max-width: 306px;
 }
+.linkedin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-weight: 300;
+    padding: 0 0 0 0;
+    margin: 10px 27px 10px 12px;
+    max-height: 40px;
+    max-width: 40px;
+}
 .p2 {
     display: flex;
     flex-direction: row;
@@ -192,21 +202,27 @@
     font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
 
 }
-.linkedin {
+
+.titulo {
+    color: black;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-weight: 300;
-    padding: 0 0 0 0;
-    margin: 10px 27px 10px 12px;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 40px; /* Tamanho da fonte */
+    margin:0;
     max-height: 40px;
-    max-width: 40px;
 }
+.paragrafo {
+    color: black;
+    display: flex;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 15px; /* Tamanho da fonte */
+    margin: 28px 0 0 0;
+
+}
+
 .box2 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-end;
     background-color: white;
     border-radius: 8px;
@@ -216,15 +232,28 @@
     max-height: 608px;
     max-width: 785px;
 }
-.running {
+.card1 {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
-    margin: 0;
+    margin-left: 28px;
     border-radius: 8px;
     background-color: white;
-
+    max-height: 333px;
+    max-width: 588px;
+}
+.box1Running {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    background-color: white;
+    border-radius: 8px;
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+    max-height: 341px;
+    max-width: 360px;
 }
 .textoRunning {
     background-color: white;
@@ -240,20 +269,17 @@
     margin: 9px 16px 16px 18px;
     border-radius: 8px;
 }
-.descricao {
+.imgRunning {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    font-weight: 250;
+    background-color: white;
     border-radius: 8px;
-    padding: 10 0 0 0;
+    padding: 0 0 0 0;
     margin: 0 0 0 0;
-    max-height: 341px;
-    max-width: 360px;
-    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
-    font-size: 64px; /* Tamanho da fonte */
+    max-height: 333px;
+    max-width: 228px;
 }
+
+
 .p1 {
     display: flex;
     flex-direction: row;
@@ -279,6 +305,20 @@
     width: 306px;
     font-size: 20px;
     font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+}
+.descricao1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    font-weight: 250;
+    border-radius: 8px;
+    padding: 10 0 0 0;
+    margin: 0 0 0 0;
+    max-height: 341px;
+    max-width: 360px;
+    font-family: 'Roboto', sans-serif; /* Fonte Roboto, caso não tenha, vai para sans-serif */
+    font-size: 64px; /* Tamanho da fonte */
 }
 .experiencia {
     display: flex;
